--- a/src/index.css
+++ b/src/index.css
@@ -149,7 +149,7 @@ li {
 
 .ImageGalleryItem-image {
   width: 100%;
-  height: 260px;
+  min-height: 260px;
   object-fit: cover;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
